# watchsync

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  pre-commit.yml  test.yml
tests/: test_watchsync.py
watchsync/: __init__.py  __main__.py  __version__.py  command.py  config.py  logger.py  utils.py
watchsync/commands/: file_add.py  file_del.py  file_list.py  file_sync.py  help_list.py  reload.py  restart.py  start.py  status.py  stop.py  storage_add.py  storage_del.py  storage_list.py  version.py
watchsync/daemon/: connector.py  watchsyncd.py  watchsyncd_event_handler.py  watchsyncd_observer.py
